fixed spacing on new pin form

--- a/public/stylesheets/css/bootstrap.css
+++ b/public/stylesheets/css/bootstrap.css
@@ -2509,6 +2509,7 @@ label {
   display: inline-block;
   max-width: 100%;
   margin-bottom: 5px;
+  margin-right: 5px;
   font-weight: bold;
 }
 input[type="search"] {
@@ -2518,7 +2519,7 @@ input[type="search"] {
 }
 input[type="radio"],
 input[type="checkbox"] {
-  margin: 4px 0 0;
+  margin: 4px 4px 4px 4px;
   margin-top: 1px \9;
   line-height: normal;
 }
