--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -340,7 +340,7 @@ div.extra-padding {
   box-shadow: 0 10px 10px 2px rgba(0,0,0,0.3);
   min-height: 250px;
   margin-top: 2%;
-
+  margin-bottom: 2%;
 }
 
 #top-pin #push-pin img {
